--- a/DOGCMFrontEnd/package.json
+++ b/DOGCMFrontEnd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cms_vue",
+  "name": "DOGCM",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,8 @@
     "js-md5": "^0.7.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "mockjs": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
