--- a/DOGCMFrontEnd/package.json
+++ b/DOGCMFrontEnd/package.json
@@ -3,19 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build": "SET NODE_OPTIONS=--openssl-legacy-provider &&vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "element-ui": "^2.13.0",
     "js-md5": "^0.7.3",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2",
-    "mockjs": "^1.1.0"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -24,6 +23,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "vite-plugin-mock": "^3.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
@@ -39,13 +39,6 @@
     "parserOptions": {
       "parser": "babel-eslint"
     }
-  },
-  "scripts": {
-
-    "serve": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
-
-    "build": "SET NODE_OPTIONS=--openssl-legacy-provider &&vue-cli-service build"
-
   },
   "browserslist": [
     "> 1%",
